--- a/src/GUI/main.glade
+++ b/src/GUI/main.glade
@@ -22,8 +22,6 @@
               <object class="GtkGrid">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">20</property>
-                <property name="margin_right">20</property>
                 <property name="margin_top">10</property>
                 <property name="hexpand">False</property>
                 <child>
@@ -61,21 +59,51 @@
               </packing>
             </child>
             <child>
-              <object class="GtkBox">
+              <object class="GtkBox" id="image_settings">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">20</property>
-                <property name="margin_right">20</property>
+                <property name="margin_top">20</property>
                 <property name="vexpand">False</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkButton">
-                    <property name="label" translatable="yes">Open image</property>
+                  <object class="GtkBox">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="margin_top">20</property>
-                    <property name="margin_bottom">20</property>
+                    <property name="can_focus">False</property>
+                    <property name="orientation">vertical</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="halign">start</property>
+                        <property name="label" translatable="yes">Load Sudoku Image</property>
+                        <attributes>
+                          <attribute name="font-desc" value="Sans Bold 10"/>
+                        </attributes>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkFileChooserButton" id="file_chooser">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="margin_bottom">1</property>
+                        <property name="title" translatable="yes"/>
+                        <signal name="file-set" handler="on_file_set" swapped="no"/>
+                        <signal name="selection-changed" handler="on_file_set" swapped="no"/>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <style>
+                      <class name="button_element"/>
+                    </style>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -84,13 +112,46 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton">
-                    <property name="label" translatable="yes">button</property>
+                  <object class="GtkBox">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="margin_top">20</property>
-                    <property name="margin_bottom">20</property>
+                    <property name="can_focus">False</property>
+                    <property name="orientation">vertical</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="halign">start</property>
+                        <property name="label" translatable="yes">Sudoku Size</property>
+                        <attributes>
+                          <attribute name="font-desc" value="Sans Bold 10"/>
+                        </attributes>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkComboBoxText">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="active">0</property>
+                        <property name="tearoff_title" translatable="yes">dfd</property>
+                        <items>
+                          <item translatable="yes">9x9</item>
+                          <item translatable="yes">16x16</item>
+                        </items>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <style>
+                      <class name="button_element"/>
+                    </style>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -99,14 +160,18 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton">
-                    <property name="label" translatable="yes">button</property>
+                  <object class="GtkButton" id="start">
+                    <property name="label" translatable="yes">Start Process</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="margin_top">20</property>
                     <property name="margin_bottom">20</property>
                     <property name="vexpand">False</property>
+                    <signal name="clicked" handler="gtk_widget_hide" object="right_panel" swapped="no"/>
+                    <style>
+                      <class name="button_element"/>
+                    </style>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -114,6 +179,9 @@
                     <property name="position">2</property>
                   </packing>
                 </child>
+                <style>
+                  <class name="button_panel"/>
+                </style>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -122,7 +190,7 @@
               </packing>
             </child>
             <style>
-              <class name="test"/>
+              <class name="left_panel"/>
             </style>
           </object>
           <packing>
@@ -132,7 +200,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkBox">
+          <object class="GtkBox" id="right_panel">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="hexpand">True</property>
@@ -141,12 +209,30 @@
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_left">56</property>
+                <property name="margin_right">18</property>
+                <property name="hexpand">False</property>
                 <property name="label" translatable="yes">label</property>
               </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
                 <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkImage" id="sudoku_image">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="hexpand">False</property>
+                <property name="vexpand">True</property>
+                <property name="pixbuf">logo1.png</property>
+                <property name="icon_size">5</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -158,6 +244,12 @@
             <child>
               <placeholder/>
             </child>
+            <child>
+              <placeholder/>
+            </child>
+            <style>
+              <class name="right_panel"/>
+            </style>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -167,8 +259,5 @@
         </child>
       </object>
     </child>
-    <style>
-      <class name="test"/>
-    </style>
   </object>
 </interface>
