--- a/src/GUI/main.glade
+++ b/src/GUI/main.glade
@@ -29,6 +29,9 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="pixbuf">logo1.png</property>
+                    <style>
+                      <class name="logo"/>
+                    </style>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -226,7 +229,7 @@
                 <property name="can_focus">False</property>
                 <property name="hexpand">False</property>
                 <property name="vexpand">True</property>
-                <property name="pixbuf">logo1.png</property>
+                <property name="pixbuf">opticalloop_logo.svg</property>
                 <property name="icon_size">5</property>
               </object>
               <packing>
@@ -236,16 +239,15 @@
               </packing>
             </child>
             <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
+              <object class="GtkDrawingArea">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">2</property>
+              </packing>
             </child>
             <style>
               <class name="right_panel"/>
