--- a/src/GUI/style.css
+++ b/src/GUI/style.css
@@ -3,8 +3,18 @@
 } */
 .left_panel button {
     /* background-color: rgb(255, 136, 0); */
-    border: 2px solid rgb(255, 136, 0);
-    border-radius: 10px;
+    border: 1px solid #ff8800;
+    border-radius: 15px;
+    background:rgb(38, 38, 47);
+}
+.left_panel button:hover {
+    /* background-color: rgb(255, 136, 0); */
+    border: 1px solid #794000;
+    background:rgb(189, 120, 10);
+}
+.left_panel button:disabled {
+    /* background-color: rgb(255, 136, 0); */
+    border: 1px solid #794000;
 }
 .left_panel {
     background-color: rgb(38, 38, 47);
@@ -12,10 +22,15 @@
     padding: 30px;
 
 }
-.right_panel image {
-   background-color: rgb(38, 38, 47);
-   margin-left:  200px ;
-   margin-right:  200px ;
+ .loading-page {
+   /* background-color: rgb(38, 38, 47); */
+    margin-left:  200px;
+    margin-right:  200px;  
+    animation-name: spin;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    /* animation-iteration-count: infinite; */
+    
 }
 .right_panel {
     background-color: rgb(16, 16, 42);
@@ -26,3 +41,27 @@
     margin-top: 15px;
     margin-bottom: 15px;
 }
+
+.right_panel button {
+    /* background-color: rgb(255, 136, 0); */
+    border: 1px solid #ff8800;
+    border-radius: 15px;
+    background:rgb(38, 38, 47);
+}
+
+.linear-wipe {
+    /* text-align: center; */
+    
+    background: linear-gradient(to right, #FFF 20%, #FF0 40%, #FF0 60%, #FFF 80%);
+    background-size: 200% auto;
+    
+    color: #000;
+    animation-name: example;
+  }
+
+.logo image:hover {
+    animation-name: spin;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    }
