add box for manual editing

--- a/src/GUI/main.glade
+++ b/src/GUI/main.glade
@@ -244,7 +244,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkBox">
+                      <object class="GtkBox" id="options">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
@@ -253,7 +253,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="halign">start</property>
-                            <property name="label" translatable="yes">Rotation</property>
+                            <property name="label" translatable="yes">Manual editing</property>
                             <attributes>
                               <attribute name="font-desc" value="Sans Bold 10"/>
                             </attributes>
@@ -266,10 +266,14 @@
                         </child>
                         <child>
                           <object class="GtkButton">
-                            <property name="label" translatable="yes">Edit</property>
+                            <property name="label" translatable="yes">Rotate</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
+                            <signal name="clicked" handler="change_panel" object="rotationPage" swapped="no"/>
+                            <style>
+                              <class name="button_element"/>
+                            </style>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -277,8 +281,26 @@
                             <property name="position">1</property>
                           </packing>
                         </child>
+                        <child>
+                          <object class="GtkButton">
+                            <property name="label" translatable="yes">Resize</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <signal name="clicked" handler="change_panel" object="resizePage" swapped="no"/>
+                            <style>
+                              <class name="button_element"/>
+                            </style>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">2</property>
+                          </packing>
+                        </child>
                         <style>
                           <class name="button_element"/>
+                          <class name="button_category"/>
                         </style>
                       </object>
                       <packing>
@@ -507,6 +529,76 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                     <property name="name">page2</property>
                     <property name="title" translatable="yes">page0</property>
                     <property name="position">2</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkBox" id="rotationPage">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="orientation">vertical</property>
+                    <child>
+                      <object class="GtkImage" id="selected_image2">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="halign">center</property>
+                        <property name="valign">center</property>
+                        <property name="stock">gtk-connect</property>
+                        <style>
+                          <class name="sudoku_image"/>
+                        </style>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="name">rotationPage</property>
+                    <property name="title" translatable="yes">page0</property>
+                    <property name="position">3</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkBox" id="resizePage">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="orientation">vertical</property>
+                    <child>
+                      <object class="GtkImage" id="selected_image3">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="halign">center</property>
+                        <property name="valign">center</property>
+                        <property name="stock">gtk-connect</property>
+                        <style>
+                          <class name="sudoku_image"/>
+                        </style>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="name">resizePage</property>
+                    <property name="title" translatable="yes">page3</property>
+                    <property name="position">4</property>
                   </packing>
                 </child>
                 <style>
