--- a/src/GUI/main.glade
+++ b/src/GUI/main.glade
@@ -270,6 +270,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
+                            <signal name="clicked" handler="edit_rotation" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -465,6 +466,22 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                         <property name="expand">False</property>
                         <property name="fill">True</property>
                         <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkScale" id="Rotation_scale">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="show_fill_level">True</property>
+                        <property name="restrict_to_fill_level">False</property>
+                        <property name="fill_level">0</property>
+                        <property name="round_digits">1</property>
+                        <signal name="value-changed" handler="rotate_img" swapped="no"/>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">2</property>
                       </packing>
                     </child>
                   </object>
